vlib/v/parser/tests/option_alias_option_type_err.vv
type Foo = ?bool

struct Bar {
        a ?Foo
}
